--- a/neovide.desktop
+++ b/neovide.desktop
@@ -16,7 +16,7 @@ Comment=A simple, no-nonsense, cross-platform graphical user interface for Neovi
 Exec=/opt/Neovide/neovide --neovim-bin=/opt/nvim-linux64/bin/nvim %F
 
 # The name of the icon that will be used to display this entry
-Icon=org.gnome.TextEditor
+Icon=neovide-128x128.png
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
